api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koru-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koru-api
  template:
    metadata:
      labels:
        app: koru-api
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: koru-api
          image: "ghcr.io/jamdon2/koru-api:sha-1699ad3"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "2Gi"
              cpu: "2"
