api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koru-api-svc
  namespace: default
spec:
  selector:
    app: koru-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
